--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,10 @@
-<h2>Log into Tech Blog</h2>
+<h2>Create Your Tech-Blog Account</h2>
 
-<form id = "login-form" class = "form">
+<form id = "signup-form" class = "form">
+     <div class = "form-group">
+        <label for= "username-signup">Username:</label>
+        <input class="form-input" type = "text" id = "username-signup">
+    </div>
     <div class = "form-group">
         <label for= "email-login">Email:</label>
         <input class="form-input" type = "text" id = "email-login">
@@ -14,4 +18,4 @@
     </div>
 </form>
 
-<script src="/js/login.js"></script>
+<script src="./js/login.js"></script>
