--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <h2>Log into Tech Blog</h2>
 
-<form id = "login-form" class = "form">
+<form id = "login-form" class = "form login-form">
     <div class = "form-group">
         <label for= "email-login">Email:</label>
         <input class="form-input" type = "text" id = "email-login">
