--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,4 @@
 {{!-- shows any blog posts already created ( by this specific account)
 and the option to add a new post --}}
 
+<h2>Your Posts</h2>
