--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
                 <li>
                     Dashboard
                 </li>
-                <li>
+                <li id="logout">
                     Log out
                 </li>
             </ul>
