--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,4 +14,8 @@
     </div>
 </form>
 
+<div>
+        <button id = "signupButton" class = "btn btn-primary">Sign up instead</button>
+</div>
+
 <script src="/js/login.js"></script>
