--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,16 +6,21 @@
         <input class="form-input" type = "text" id = "username-signup">
     </div>
     <div class = "form-group">
-        <label for= "email-login">Email:</label>
-        <input class="form-input" type = "text" id = "email-login">
+        <label for= "email-signup">Email:</label>
+        <input class="form-input" type = "text" id = "email-signup">
     </div>
     <div class = "form-group">
-        <label for= "password-login">Password:</label>
-        <input class="form-input" type = "password" id = "password-login">
+        <label for= "password-signup">Password:</label>
+        <input class="form-input" type = "password" id = "password-signup">
     </div>
     <div class = "form-group">
-        <button class = "btn btn-primary" type = "submit"> Log me in!</button>
+        <button class = "btn btn-primary" type = "submit"> Sign me up!</button>
     </div>
 </form>
 
-<script src="./js/login.js"></script>
+<div>
+        <button id = "loginButton" class = "btn btn-primary">Log in instead</button>
+</div>
+
+
+<script src="./js/signup.js"></script>
