--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
                 <li id="dashboard">
                     Dashboard
                 </li>
-                <li>
+                <li id = 'home'>
                     Home
                 </li>
                 <li id="login">
