--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,7 +17,7 @@ and the option to add a new post --}}
     </section>
 </section>
 
-<button href="/createPost" class="btn btn-warning">+ New post</button>
+<a href="/newPost" class="btn btn-warning">+ New post</a>
 {{else}}
 <p>You must be logged in to view your posts</p>
 <a class = 'btn' href="/login">Log in</a>
