--- a/views/createPost.handlebars
+++ b/views/createPost.handlebars
@@ -4,7 +4,9 @@
 //user_id is the id of the logged in user
 //users is the User object
 //posts is the Post object --}}
+<h3>Create New Post</h3>
 
+{{#if logged_in}}
 <form id='newPost-form' class="form">
     <div class="form-group">
         <label for="newPost-title">Title:</label>
@@ -18,7 +20,10 @@
     <div class="form-group">
         <a id= "newPost-submit" class="btn btn-info">Post</a>
     </div>
-
+{{else}}
+<p>You must be logged in to create a new post</p>
+<a class = 'btn' href="/login">Log in</a>
 </form>
+{{/if}}
 
 <script src="/js/createPost.js"></script>
