--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,9 +1,9 @@
 {{!-- shows all blog posts by all users --}}
-<h2>Dashboard</h2>
+<h2 class="dashboard-header">Dashboard</h2>
 
 <section class="container">
     <h3>All Posts</h3>
-    {{#if logged_in}}
+    {{!-- {{#if logged_in}} --}}
     <section class="flex-row justify center">
         {{#each posts}}
             <h3>{{title}}</h3>
@@ -11,7 +11,7 @@
         {{/each}}
     </section>
 </section>
-{{else}}
+{{!-- {{else}}
 <p>You must be logged in to view all posts</p>
 <a class = 'btn' href="/login">Log in</a>
-{{/if}}
+{{/if}} --}}
