--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,51 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    {{!-- google fonts --}}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
+
+    {{!-- bootstrap --}}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
+
+    {{!-- stylesheets --}}
+    <link rel="Stylesheet" href="/css/style.css">
+
     <title>Tech-Blog</title>
 </head>
+
 <body>
     <header>
-        <h1>
-            Tech Blog
-        </h1>
-        {{#if logged_in}}
-        <nav>
-            <ul>
-                <li>
-                    Home
-                </li>
-                <li id="dashboard">
-                    Dashboard
-                </li>
-                <li id="logout">
-                    Log out
-                </li>
-            </ul>
-        </nav>
-        {{else}}
-        <nav>
-            <ul>
-                <li id="dashboard">
-                    Dashboard
-                </li>
-                <li id = 'home'>
-                    Home
-                </li>
-                <li id="login">
-                    Log in
-                </li>
-                <li id = 'signup'>
-                    Create account
-                </li>
-            </ul>
-        </nav>
-        {{/if}}
+        <div class="main-header">
+            <div class="nav-logo-container">
+                <h1 class="nav-logo">
+                    <img src="/images/logo_alt.png" style="height:150px">
+                </h1>
+            </div>
+
+            {{#if logged_in}}
+            <div class="nav-items">
+                <nav>
+                    <ul>
+                        <li>
+                            Home
+                        </li>
+                        <li id="dashboard">
+                            Dashboard
+                        </li>
+                        <li id="logout">
+                            Log out
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            {{else}}
+            <div class="nav-items">
+                <nav>
+                    <ul>
+                        <li id="dashboard">
+                            Dashboard
+                        </li>
+                        <li id='home'>
+                            Home
+                        </li>
+                        <li id="login">
+                            Log in
+                        </li>
+                        <li id='signup'>
+                            Create account
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            {{/if}}
+        </div>
     </header>
     <main>
         {{{body}}}
@@ -53,10 +75,11 @@
 
 
     {{#if logged_in}}
-    <script src = '/js/logout.js'></script>
+    <script src='/js/logout.js'></script>
 
     {{else}}
-    <script src = '/js/navigation.js'></script>
+    <script src='/js/navigation.js'></script>
     {{/if}}
 </body>
+
 </html>
