--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,13 +34,14 @@
                 <nav>
                     <ul>
                         <li>
-                            Home
+                            <a href = '/'>Dashboard</a>
                         </li>
                         <li id="dashboard">
-                            Dashboard
+                            <a href = '/home'>Your Posts</a>
+
                         </li>
                         <li id="logout">
-                            Log out
+                            <a href="">Log out</a>
                         </li>
                     </ul>
                 </nav>
@@ -51,16 +52,16 @@
                 <nav>
                     <ul>
                         <li id="dashboard">
-                            Dashboard
+                            <a href = '/'>Dashboard</a>
                         </li>
                         <li id='home'>
-                            Home
+                            <a href = '/home'>Your Posts</a>
                         </li>
                         <li id="login">
-                            Log in
+                            <a href="/login">Log in</a>
                         </li>
                         <li id='signup'>
-                            Create account
+                            <a href="/signup">Create Account</a>
                         </li>
                     </ul>
                 </nav>
