--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,6 @@
 <h2 class="login-header">Log into Tech Blog</h2>
 
+<p id="passwordEmailCombinationWarning" class="loginWarning hidden">Provided password/email combination is not valid</p>
 <form id="login-form" class="form login-form">
     <div class="form-group">
         <label class= "formLabel" for="email-login">Email:</label>
