--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,8 +6,15 @@
     <section class="flex-row justify center">
         {{#each posts}}
         <div class="post-container">
-            <h3>{{title}}</h3>
+            <div class="titleAndInfo-container">
+                <h3>{{title}}</h3>
+                <p class="postInfo"> Posted by {{user.name}} on {{format_date createdAt "yyyy-mm-dd"}}</p>
+            </div>
             <p>{{body}}</p>
+            <div class="dashboardButon-container">
+            <button class="viewPost-button btn">View Post</button>
+            </div>
+            <br>
         </div>
         {{/each}}
     </section>
