--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,6 +90,11 @@ a {
     text-decoration: none;
 }
 
+a:link, a:visited {
+    text-decoration: none;
+    color: inherit;
+  }
+
 .loginButton-container, .signupButton-container, .homepageButton-container, .newPostButton-container, .dashboardButon-container {
     display: flex;
     justify-content: center;
