--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,9 +12,9 @@
                     <p class="postInfo"> Posted by {{user.name}} on {{format_date createdAt "yyyy-mm-dd"}}</p>
                 </div>
                 <p>{{body}}</p>
-                <div class="dashboardButon-container">
+                {{!-- <div class="dashboardButon-container">
                     <button class="viewPost-button btn">View Post</button>
-                </div>
+                </div> --}}
                 <br>
             </div>
         </a>
