--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
             {{#if logged_in}}
             <div class="nav-items">
                 <nav>
-                    <ul>
+                    <ul class="nav-items">
                         <li>
                             <a href = '/'>Dashboard</a>
                         </li>
@@ -50,7 +50,7 @@
             {{else}}
             <div class="nav-items">
                 <nav>
-                    <ul>
+                    <ul class="nav-items">
                         <li id="dashboard">
                             <a href = '/'>Dashboard</a>
                         </li>
