--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
         <a href="/viewPost/{{id}}">
             <div class="post-container">
                 <div class="titleAndInfo-container">
-                    <h3>{{title}}</h3>
+                    <h3 class="postTitle">{{title}}</h3>
                     <p class="postInfo"> Posted by {{user.name}} on {{format_date createdAt "yyyy-mm-dd"}}</p>
                 </div>
                 <p>{{body}}</p>
